// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render alm configuration creation correctly 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <withAppStateContext(CreateProjectModeSelection)
      almCounts={
        Object {
          "azure": 0,
          "bitbucket": 0,
          "bitbucketcloud": 0,
          "github": 0,
          "gitlab": 0,
        }
      }
      loadingBindings={true}
      onConfigMode={[Function]}
      onSelectMode={[Function]}
    />
    <AlmBindingDefinitionForm
      afterSubmit={[Function]}
      alm="azure"
      alreadyHaveInstanceConfigured={false}
      enforceValidation={true}
      onCancel={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <withAppStateContext(CreateProjectModeSelection)
      almCounts={
        Object {
          "azure": 0,
          "bitbucket": 0,
          "bitbucketcloud": 0,
          "github": 0,
          "gitlab": 0,
        }
      }
      loadingBindings={true}
      onConfigMode={[Function]}
      onSelectMode={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly for azure mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <AzureProjectCreate
      canAdmin={false}
      loadingBindings={true}
      location={
        Object {
          "action": "PUSH",
          "hash": "",
          "key": "key",
          "pathname": "/path",
          "query": Object {
            "mode": "azure",
          },
          "search": "",
          "state": Object {},
        }
      }
      onProjectCreate={[Function]}
      router={
        Object {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
      settings={Array []}
    />
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucket mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <BitbucketProjectCreate
      bitbucketSettings={Array []}
      canAdmin={false}
      loadingBindings={true}
      location={
        Object {
          "action": "PUSH",
          "hash": "",
          "key": "key",
          "pathname": "/path",
          "query": Object {
            "mode": "bitbucket",
          },
          "search": "",
          "state": Object {},
        }
      }
      onProjectCreate={[Function]}
      router={
        Object {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucketcloud mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <BitbucketCloudProjectCreate
      canAdmin={false}
      loadingBindings={true}
      location={
        Object {
          "action": "PUSH",
          "hash": "",
          "key": "key",
          "pathname": "/path",
          "query": Object {
            "mode": "bitbucketcloud",
          },
          "search": "",
          "state": Object {},
        }
      }
      onProjectCreate={[Function]}
      router={
        Object {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
      settings={Array []}
    />
  </div>
</Fragment>
`;

exports[`should render correctly for github mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <GitHubProjectCreate
      canAdmin={false}
      loadingBindings={true}
      location={
        Object {
          "action": "PUSH",
          "hash": "",
          "key": "key",
          "pathname": "/path",
          "query": Object {
            "mode": "github",
          },
          "search": "",
          "state": Object {},
        }
      }
      onProjectCreate={[Function]}
      router={
        Object {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
      settings={Array []}
    />
  </div>
</Fragment>
`;

exports[`should render correctly for gitlab mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <GitlabProjectCreate
      canAdmin={false}
      loadingBindings={true}
      location={
        Object {
          "action": "PUSH",
          "hash": "",
          "key": "key",
          "pathname": "/path",
          "query": Object {
            "mode": "gitlab",
          },
          "search": "",
          "state": Object {},
        }
      }
      onProjectCreate={[Function]}
      router={
        Object {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
      settings={Array []}
    />
  </div>
</Fragment>
`;

exports[`should render correctly for manual mode 1`] = `
<Fragment>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="onboarding.create_project.select_method"
    titleTemplate="%s"
  />
  <A11ySkipTarget
    anchor="create_project_main"
  />
  <div
    className="page page-limited huge-spacer-bottom position-relative"
    id="create-project"
  >
    <ManualProjectCreate
      branchesEnabled={false}
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;
